--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/Updateproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/Updateproduct.cshtml
@@ -25,7 +25,7 @@
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input class="form-control" id="Barcode" type="text" name="Barcode" value="@Model.Product.BarcodeNb" required />
+                                        <input class="form-control" id="Barcode" type="text" name="Barcode" value="@Model.Product.BarcodeNb" required  pattern="[0-9]+"  oninvalid="this.setCustomValidity('Please enter just numbers')"oninput="this.setCustomValidity('')" />
                                         <label for="Barcode">Barcode</label>
                                     </div>
                                 </div>
@@ -109,7 +109,7 @@
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input class="form-control" id="Barcode" type="text" name="Barcode" value="@Model.Product.BarcodeNb" required />
+                                        <input class="form-control" id="Barcode" type="text" name="Barcode" value="@Model.Product.BarcodeNb" required   pattern="[0-9]+"  oninvalid="this.setCustomValidity('ادخل ارقام فقط')"oninput="this.setCustomValidity('')" />
                                         <label for="Barcode">الرمز</label>
                                     </div>
                                 </div>
