--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Createsupermarket.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Createsupermarket.cshtml
@@ -43,7 +43,7 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" required />
+                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" required  pattern="[0-9]+"  oninvalid="this.setCustomValidity('Please enter just numbers')"oninput="this.setCustomValidity('')"  />
                                         <label for="phonenumber">SuperMarket Phone Number</label>
                                     </div>
                                 </div>
@@ -108,7 +108,7 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" required />
+                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" required  pattern="[0-9]+"  oninvalid="this.setCustomValidity('ادخل ارقام فقط')"oninput="this.setCustomValidity('')" />
                                         <label for="phonenumber">رقم الهاتف</label>
                                     </div>
                                 </div>
