--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Updatesupermarket.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Updatesupermarket.cshtml
@@ -41,7 +41,7 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" value="@Model.Phonenumber" required />
+                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" value="@Model.Phonenumber" required  pattern="[0-9]+"  oninvalid="this.setCustomValidity('Please just enter numbers')"oninput="this.setCustomValidity('')" />
                                         <label for="phonenumber">Phone number</label>
                                     </div>
                                 </div>
@@ -104,7 +104,7 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" value="@Model.Phonenumber" required />
+                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" value="@Model.Phonenumber" required   pattern="[0-9]+"  oninvalid="this.setCustomValidity('ادخل ارقام فقط')"oninput="this.setCustomValidity('')" />
                                         <label for="phonenumber">رقم الهاتف</label>
                                     </div>
                                 </div>
