--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Createproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Createproduct.cshtml
@@ -46,7 +46,7 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="price" type="text" name="price" required />
+                                        <input class="form-control" id="price" type="text" name="price" required  pattern="[0-9]+"  oninvalid="this.setCustomValidity('please enter just numbers')"oninput="this.setCustomValidity('')"  />
                                         <label for="price">Product price</label>
                                     </div>
                                 </div>
@@ -117,7 +117,7 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="price" type="text" name="price" required />
+                                        <input class="form-control" id="price" type="text" name="price" required  pattern="[0-9]+"  oninvalid="this.setCustomValidity('ادخل ارقام فقط')"oninput="this.setCustomValidity('')"  />
                                         <label for="price">سعر المنتج</label>
                                     </div>
                                 </div>
