finished arabic and english with toggle button + fixed category bug when updating product info

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Index.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Index.cshtml
@@ -4,18 +4,34 @@
 
 <!-- home section starts  -->
 
-<section class="home" id="home">
+<section style="margin-top:40px" class="home" id="home">
 
 
 
-    <div class="content">
+    <div class="English content">
         <h3>Choose best price from your Home</h3>
-        <p>We provide this application to help you find your products at best price ,
-         Save Money ! Save Time !
+        <p>
+            We provide this application to help you find your products at best price ,
+            Save Money ! Save Time !
         </p>
         <a href="/Home/Options" class="btn"> Discover Products <span class="fas fa-chevron-right"></span> </a>
     </div>
-    <div class="image">
+    <div class="English image">
+        <img style="height:550px" src="~/Images/bag.svg" alt="">
+    </div>
+
+
+    <div class="Arabic content">
+        <h3>اختار السعر الانسب من البيت</h3>
+        <p>
+
+             
+            نقدم لكم هذا التطبيق لمساعدتكم على الحصول على البضائع بافضل الاسعار 
+                  ! احفظ وقتك ! احفظ اموالك
+        </p>
+        <a href="/Home/Options" class="btn"> تصفح البضائع<span class="fas fa-chevron-right"></span> </a>
+    </div>
+    <div class="Arabic image">
         <img style="height:550px" src="~/Images/bag.svg" alt="">
     </div>
 
@@ -26,32 +42,48 @@
 
 <section class="about" id="about">
 
-    <h1 class="heading"> <span>about</span> us </h1>
+    <h1 class="English heading"> <span>about</span> us </h1>
 
     <div class="row">
-
-
-
-        <div class="content">
+        <div class="English content">
             <h3>Compare grocery prices</h3>
-            <p>Compare 15+ supermarkets, discover daily deals, and create smart shopping lists to save as much as 30% on your next grocery trip
-            shopping lists to save as much as 30% on your next grocery trip</p>
+            <p>
+                Compare 15+ supermarkets, discover daily deals, and create smart shopping lists to save as much as 30% on your next grocery trip
+              
+            </p>
             <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
-        <div class="image">
-            <img style="height:550px" src="~/Images/dollar.svg" alt="">
+        <div class="English image">
+            <img style="height:550px;min-height:200px;max-height:550px" src="~/Images/dollar.svg" alt="">
         </div>
     </div>
 
+
+
+
+
+
+    <h1 class="Arabic heading"> <span>معلومات </span> عنا </h1>
+
+    <div class=" row">
+
+
+
+        <div class="Arabic content">
+            <h3>قارن اسعار المنتجات</h3>
+            <p>
+                قارن أكثر من 15 متجرًا سوبر ماركت ، واكتشف الصفقات اليومية ، وأنشئ قوائم تسوق ذكية لتوفير ما يصل إلى 30 ٪ في رحلة البقالة التالية
+              
+            </p>
+            <a href="#" class="btn">المزيد<span class="fas fa-chevron-right"></span> </a>
+        </div>
+
+        <div class="Arabic image">
+            <img style="height:550px;min-height:200px;max-height:550px" src="~/Images/dollar.svg" alt="">
+        </div>
+    </div>
+
+
 </section>
 
-<!-- about section ends -->
-
-@section scripts {
-    
-    <script src="~/Scripts/script.js">
-
-    </script>
-    
-    }
