--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/Updateproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/Updateproduct.cshtml
@@ -37,7 +37,7 @@
                             </div>
 
 
-
+                            <h6 style="color:red;opacity:0.5">@TempData["Message3"] </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -109,7 +109,7 @@
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input class="form-control" id="Barcode" type="text" name="Barcode" value="@Model.Product.BarcodeNb" required   pattern="[0-9]+"  oninvalid="this.setCustomValidity('ادخل ارقام فقط')"oninput="this.setCustomValidity('')" />
+                                        <input class="form-control" id="Barcode" type="text" name="Barcode" value="@Model.Product.BarcodeNb" required pattern="[0-9]+" oninvalid="this.setCustomValidity('ادخل ارقام فقط')" oninput="this.setCustomValidity('')" />
                                         <label for="Barcode">الرمز</label>
                                     </div>
                                 </div>
@@ -121,7 +121,7 @@
                             </div>
 
 
-
+                            <h6 style="color:red;opacity:0.5">@TempData["Message3"] </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-group">
