--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Allproducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Allproducts.cshtml
@@ -9,45 +9,92 @@
 
 <div style="height:100px"> <span></span></div>
 
+<div class="English">
 
-
-<table id="products" class="table table-striped table-bordered" style="width:100% ;">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Bar code</th>
-            <th>Description</th>
-            <th>Category</th>
-            <th>Cheap price</th>
-            <th>Expensive price</th>
-
-
-
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var market in Model)
-        {
-
+    <table id="products" class="table table-striped table-bordered" style="width:100% ;">
+        <thead>
             <tr>
+                <th>Name</th>
+                <th>Bar code</th>
+                <th>Description</th>
+                <th>Category</th>
+                <th>Cheap price</th>
+                <th>Expensive price</th>
 
-                <td>@market.productname</td>
-                <td>@market.productBarcode</td>
-                <td>@market.productDescription</td>
-                <td>@market.productcategory</td>
 
 
-
-                <td>@Html.ActionLink("Cheapest price", "GetCheapestproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
-                <td>@Html.ActionLink("Expensive price", "GetExpensiveproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var market in Model)
+            {
+
+                <tr>
+
+                    <td>@market.productname</td>
+                    <td>@market.productBarcode</td>
+                    <td>@market.productDescription</td>
+                    <td>@market.productcategory</td>
+
+
+
+                    <td>@Html.ActionLink("Cheapest price", "GetCheapestproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
+                    <td>@Html.ActionLink("Expensive price", "GetExpensiveproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+
+
+<div class="Arabic">
+
+    <table id="productsa" class="table table-striped table-bordered" style="width:100% ;">
+        <thead>
+            <tr>
+                <th>الاسم</th>
+                <th>الرمز</th>
+                <th>الوصف</th>
+                <th>الصنف</th>
+                <th></th>
+                <th></th>
+
+
+
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var market in Model)
+            {
+
+                <tr>
+
+                    <td>@market.productname</td>
+                    <td>@market.productBarcode</td>
+                    <td>@market.productDescription</td>
+                    <td>@market.productcategory</td>
+
+
+
+                    <td>@Html.ActionLink("السعر الارخص", "GetCheapestproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
+                    <td>@Html.ActionLink("السعر الاغلى", "GetExpensiveproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+
+
+
 
 <div style="margin-bottom:200px">
     <span></span>
 </div>
+
+
+
 
 
 @section Styles {
@@ -68,6 +115,10 @@
             $('#products').DataTable();
         });
 
+
+        $(document).ready(function () {
+            $('#productsa').DataTable();
+        });
 
     </script>
 
