--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Options.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Options.cshtml
@@ -5,42 +5,88 @@
 
 
 
-
-<div class="row1-cont" style="margin-top:90px; margin-bottom:150px ">
-    <div class="boxx boxx-down cyan">
-        <a href="/Home/Allproducts">
-            <h2>Best Product Price</h2>
-            <p>Lowest Product Price Here !</p>
-            <img src="~/Images/magnifier.svg" alt="">
+<div class="English">
+    <div class="row1-cont" style="margin-top:90px; margin-bottom:150px ">
+        <div class="boxx boxx-down cyan">
+            <a href="/Home/Allproducts">
+                <h2>Best Product Price</h2>
+                <p>Lowest Product Price Here !</p>
+                <img src="~/Images/magnifier.svg" alt="">
             </a>
+        </div>
+
+
+
+        <div class="boxx red">
+            <a href="/Home/SuperMarketList">
+                <h2>SuperMarkets</h2>
+                <p>search for supermarkets and products !</p>
+                <img src="~/Images/icon-team-builder.svg" alt="">
+            </a>
+        </div>
+
+
+        <div class="boxx boxx-down blue">
+            <h2>Track</h2>
+            <p>Track how product price changes in a superMarket</p>
+            <img src="~/Images/icon-calculator.svg" alt="">
+        </div>
+    </div>
+    <div class="row2-cont">
+        <div class="boxx orange">
+            <h2>Events</h2>
+            <p>Events, sales, vouchers !</p>
+            <img src="~/Images/icon-karma.svg" alt="">
+        </div>
     </div>
 
-
-
-    <div class="boxx red">
-        <a href="/Home/SuperMarketList">
-            <h2>SuperMarket</h2>
-            <p>search for supermarkets and products !</p>
-            <img src="~/Images/icon-team-builder.svg" alt="">
-        </a>
-    </div>
-
-   
-    <div class="boxx boxx-down blue">
-        <h2>Track</h2>
-        <p>Track how product price changes in a superMarket</p>
-        <img src="~/Images/icon-calculator.svg" alt="">
-    </div>
 </div>
-<div class="row2-cont">
-    <div class="boxx orange">
-        <h2>Events</h2>
-        <p>Events, sales, vouchers !</p>
-        <img src="~/Images/icon-karma.svg" alt="">
+
+<div class="Arabic">
+    <div class="row1-cont" style="margin-top:90px; margin-bottom:150px ">
+        <div class="boxx boxx-down cyan">
+            <a href="/Home/Allproducts">
+                <h2>أفضل سعر للمنتج</h2>
+                <p>!أقل سعر للمنتج هنا </p>
+                <img src="~/Images/magnifier.svg" alt="">
+            </a>
+        </div>
+
+
+
+        <div class="boxx red">
+            <a href="/Home/SuperMarketList">
+                <h2>المتجر</h2>
+                <p>!البحث عن محلات السوبر ماركت والمنتجات</p>
+                <img src="~/Images/icon-team-builder.svg" alt="">
+            </a>
+        </div>
+
+
+        <div class="boxx boxx-down blue">
+            <h2>مرابقه الاسعار</h2>
+            <p>!تتبع كيف يتغير سعر المنتج في سوبر ماركت </p>
+            <img src="~/Images/icon-calculator.svg" alt="">
+        </div>
     </div>
+    <div class="row2-cont">
+        <div class="boxx orange">
+            <h2>الأحداث</h2>
+            <p>!الأحداث والمبيعات والقسائم</p>
+            <img src="~/Images/icon-karma.svg" alt="">
+        </div>
+    </div>
+
 </div>
 
 <div style="margin-bottom:60px"> <span></span></div>
+
+
+
+
+
+
+
 
 
 @section styles {
