--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
@@ -7,35 +7,69 @@
 <div style="height:100px"> <span></span></div>
 
 
-
-<table id="supermarket" class="table table-striped table-bordered" style="width:100% ;">
-    <thead>
-        <tr>
-            <th>Market Name</th>
-            <th>Market Region</th>
-            <th>Description</th>
-            <th>phone number</th>
-            <th>products</th>
-
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var market in Model)
-        {
-
+<div class="English">
+    <table id="supermarket" class="table table-striped table-bordered" style="width:100% ;">
+        <thead>
             <tr>
-                <td>@market.SupermarketName</td>
-                <td>@market.SupermarketRegion</td>
-                <td>@market.SupermarketDescription</td>
-                <td>@market.Phonenumber</td>
+                <th>Market Name</th>
+                <th>Market Region</th>
+                <th>Description</th>
+                <th>phone number</th>
+                <th></th>
 
-
-                <td>@Html.ActionLink("products", "ProductList", "Home", new { id = market.SupermarketId }, new { @class = "btn btn-primary" })</td>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var market in Model)
+            {
 
+                <tr>
+                    <td>@market.SupermarketName</td>
+                    <td>@market.SupermarketRegion</td>
+                    <td>@market.SupermarketDescription</td>
+                    <td>@market.Phonenumber</td>
+
+
+                    <td>@Html.ActionLink("products", "ProductList", "Home", new { id = market.SupermarketId }, new { @class = "btn btn-primary" })</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
+
+
+
+<div class="Arabic">
+    <table id="supermarketa" class="table table-striped table-bordered" style="width:100% ;">
+        <thead>
+            <tr>
+                <th>اسم المتجر</th>
+                <th>المنطقه</th>
+                <th>الوصف</th>
+                <th>رقم الهاتف</th>
+                <th></th>
+
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var market in Model)
+            {
+
+                <tr>
+                    <td>@market.SupermarketName</td>
+                    <td>@market.SupermarketRegion</td>
+                    <td>@market.SupermarketDescription</td>
+                    <td>@market.Phonenumber</td>
+
+
+                    <td>@Html.ActionLink("البضائع", "ProductList", "Home", new { id = market.SupermarketId }, new { @class = "btn btn-primary" })</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
 <div style="margin-bottom:200px">
     <span></span>
 </div>
@@ -59,6 +93,9 @@
             $('#supermarket').DataTable();
         });
 
+        $(document).ready(function () {
+            $('#supermarketa').DataTable();
+        });
 
     </script>
 
