set interval time for changing lang method

--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
@@ -215,8 +215,10 @@
                 localStorage.setItem("lang", "English");
             }
 
-            location.reload();
+            
+          
 
+            setTimeout(function () { location.reload(); }, 100);
 
         }
 
