--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/GetCheapestproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/GetCheapestproduct.cshtml
@@ -72,7 +72,7 @@
 
 <main class="Arabic">
 
-    <h1 style="margin-top: 130px; font-family:'Times New Roman', Times, serif; margin-left: 20px">Top Cheapest Product</h1>
+    <h1 style="margin-top: 130px; font-family:'Times New Roman', Times, serif; margin-left: 20px" dir="rtl">ارخص الاسعار</h1>
 
     <div style="margin-top: 50px;margin-bottom:100px; display: flex;justify-content:space-evenly">
 
