--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
@@ -203,6 +203,10 @@
                                     showConfirmButton: false,
                                     timer: 1500
                                 })
+                                if (response.isRedirect) {
+                                    window.location.href = response.redirecturl;
+                                }
+
 
 
                             }
@@ -295,6 +299,12 @@
                                     showConfirmButton: false,
                                     timer: 1500
                                 })
+
+                                if (response.isRedirect) {
+                                    window.location.href = response.redirecturl;
+                                }
+
+
 
 
                             }
