--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Updaterole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Updaterole.cshtml
@@ -145,7 +145,7 @@
 
                                         if (permission.PermissionId == checkedperm.PermissionId)
                                         {
-                                            <input style=" cursor: pointer;" class="form-check-input checkk" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" checked value="@permission.PermissionId">
+                                            <input style=" cursor: pointer;" class="form-check-input checka" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" checked value="@permission.PermissionId">
 
                                             <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
 
@@ -158,7 +158,7 @@
 
                                     @if (flag == true)
                                     {
-                                        <input style=" cursor: pointer;" class="form-check-input checkk" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+                                        <input style=" cursor: pointer;" class="form-check-input checka" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
 
                                         <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
 
@@ -258,14 +258,21 @@
                         //here if request is successfully send then its success but we want to see the response after a successful request
                         success: function (response) {
                             if (response.success) {
-
+                                
                                 Swal.fire({
                                     position: 'top-end',
                                     icon: 'success',
                                     title: response.responseText,
                                     showConfirmButton: false,
                                     timer: 1500
+                                    
                                 })
+
+                                if (response.isRedirect) {
+                                    window.location.href = response.redirecturl;
+                                }
+
+
                             }
                             else {
                                 Swal.fire({
@@ -324,7 +331,7 @@
                 var roleid = document.getElementById("roleid").value;
                 var data = rolename + "," + roleid + ",";
 
-                var allcheckbox = document.getElementsByClassName("checkk");
+                var allcheckbox = document.getElementsByClassName("checka");
 
 
                 for (var checkedone of allcheckbox) {
@@ -355,8 +362,12 @@
                                     icon: 'success',
                                     title: response.responseText,
                                     showConfirmButton: false,
-                                    timer: 1500
+                                    timer: 1000
                                 })
+                                if (response.isRedirect) {
+                                    window.location.href = response.redirecturl;
+                                }
+
                             }
                             else {
                                 Swal.fire({
