graph done + unauthorized page

--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Dashboard.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Dashboard.cshtml
@@ -89,7 +89,7 @@
 
                     <h2 class="text-right">
                         <i class="fa-solid fa-chart-line"></i>
-                        <a class="btn bg-gradient" style="width:fit-content" href="/Track/Choose" id="trackbtn">Visualize product price</a>
+                        <a class="btn bg-gradient" style="width:fit-content" href="/Track/Allsupermarkets" id="trackbtn">Visualize product price</a>
 
 
                     </h2>
@@ -97,6 +97,10 @@
                 </div>
             </div>
         </div>
+
+
+
+
     </div>
 </div>
 
@@ -157,7 +161,7 @@
                     <h2 class="text-right">
                         <i class="fa-solid fa-chart-line"></i>
 
-                        <a class="btn bg-gradient" style="width:fit-content" href="/Track/Choose" id="trackbtn">تصور سعر المنتج</a>
+                        <a class="btn bg-gradient" style="width:fit-content" href="/Track/Allsupermarkets" id="trackbtn">تصور سعر المنتج</a>
 
                     </h2>
                     <p class="m-b-0"> <span class="f-right"></span></p>
