--- a/MarketPricingSystem/MarketPricingSystem/Views/Account/Unauthorized.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Account/Unauthorized.cshtml
@@ -7,122 +7,246 @@
 
 <html>
 <head>
+    <link rel="icon" type="image/svg" href="~/Images/icon.svg" sizes="32x32">
     <meta name="viewport" content="width=device-width" />
-    <title>Unauthorized</title>
+    <title>Error</title>
 
 
     <style>
-        @@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Roboto:wght@100;300&display=swap");
-:root {
-  --button: #b3b3b3;
-  --button-color: #0a0a0a;
-  --shadow: #000;
-  --bg: #737373;
-  --header: #7a7a7a;
-  --color: #fafafa;
-  --lit-header: #e6e6e6;
-  --speed: 2s;
-}
-* {
-  box-sizing: border-box;
-  transform-style: preserve-3d;
-}
 
-body {
-  min-height: 100vh;
-  display: flex;
-  font-family: 'Roboto', sans-serif;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: var(--bg);
-  color: var(--color);
-  perspective: 1200px;
-}
-a {
-  text-transform: uppercase;
-  text-decoration: none;
-  background: var(--button);
-  color: var(--button-color);
-  padding: 1rem 4rem;
-  border-radius: 4rem;
-  font-size: 0.875rem;
-  letter-spacing: 0.05rem;
-}
-p {
-  font-weight: 100;
-}
-h1 {
-  -webkit-animation: swing var(--speed) infinite alternate ease-in-out;
-          animation: swing var(--speed) infinite alternate ease-in-out;
-  font-size: clamp(5rem, 40vmin, 20rem);
-  font-family: 'Open Sans', sans-serif;
-  margin: 0;
-  margin-bottom: 1rem;
-  letter-spacing: 1rem;
-  transform: translate3d(0, 0, 0vmin);
-  --x: calc(50% + (var(--swing-x) * 0.5) * 1%);
-  background: radial-gradient(var(--lit-header), var(--header) 45%) var(--x) 100%/200% 200%;
-  -webkit-background-clip: text;
-  color: transparent;
-}
-h1:after {
-  -webkit-animation: swing var(--speed) infinite alternate ease-in-out;
-          animation: swing var(--speed) infinite alternate ease-in-out;
-  content: "404";
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: var(--shadow);
-  filter: blur(1.5vmin);
-  transform: scale(1.05) translate3d(0, 12%, -10vmin) translate(calc((var(--swing-x, 0) * 0.05) * 1%), calc((var(--swing-y) * 0.05) * 1%));
-}
-.cloak {
-  animation: swing var(--speed) infinite alternate-reverse ease-in-out;
-  height: 100%;
-  width: 100%;
-  transform-origin: 50% 30%;
-  transform: rotate(calc(var(--swing-x) * -0.25deg));
-  background: radial-gradient(40% 40% at 50% 42%, transparent, #000 35%);
-}
-.cloak__wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  overflow: hidden;
-}
-.cloak__container {
-  height: 250vmax;
-  width: 250vmax;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.info {
-  text-align: center;
-  line-height: 1.5;
-  max-width: clamp(16rem, 90vmin, 25rem);
-}
-.info > p {
-  margin-bottom: 3rem;
-}
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+        }
 
+        html {
+            font-size: 62.5%;
+        }
+
+        body {
+            font-family: "Lato", sans-serif;
+            font-size: 1.5rem;
+            color: #293b49;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        .center {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        .error {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-content: center;
+        }
+
+        .number {
+            font-weight: 900;
+            font-size: 15rem;
+            line-height: 1;
+        }
+
+        .illustration {
+            position: relative;
+            width: 12.2rem;
+            margin: 0 2.1rem;
+        }
+
+        .circle {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 12.2rem;
+            height: 11.4rem;
+            border-radius: 50%;
+            background-color: #293b49;
+        }
+
+        .clip {
+            position: absolute;
+            bottom: 0.3rem;
+            left: 50%;
+            transform: translateX(-50%);
+            overflow: hidden;
+            width: 12.5rem;
+            height: 13rem;
+            border-radius: 0 0 50% 50%;
+        }
+
+        .paper {
+            position: absolute;
+            bottom: -0.3rem;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 9.2rem;
+            height: 12.4rem;
+            border: 0.3rem solid #293b49;
+            background-color: white;
+            border-radius: 0.8rem;
+        }
+
+            .paper::before {
+                content: "";
+                position: absolute;
+                top: -0.7rem;
+                right: -0.7rem;
+                width: 1.4rem;
+                height: 1rem;
+                background-color: white;
+                border-bottom: 0.3rem solid #293b49;
+                transform: rotate(45deg);
+            }
+
+        .face {
+            position: relative;
+            margin-top: 2.3rem;
+        }
+
+        .eyes {
+            position: absolute;
+            top: 0;
+            left: 2.4rem;
+            width: 4.6rem;
+            height: 0.8rem;
+        }
+
+        .eye {
+            position: absolute;
+            bottom: 0;
+            width: 0.8rem;
+            height: 0.8rem;
+            border-radius: 50%;
+            background-color: #293b49;
+            animation-name: eye;
+            animation-duration: 4s;
+            animation-iteration-count: infinite;
+            animation-timing-function: ease-in-out;
+        }
+
+        .eye-left {
+            left: 0;
+        }
+
+        .eye-right {
+            right: 0;
+        }
+
+        @@keyframes eye {
+            0% {
+                height: 0.8rem;
+            }
+
+            50% {
+                height: 0.8rem;
+            }
+
+            52% {
+                height: 0.1rem;
+            }
+
+            54% {
+                height: 0.8rem;
+            }
+
+            100% {
+                height: 0.8rem;
+            }
+        }
+
+        .rosyCheeks {
+            position: absolute;
+            top: 1.6rem;
+            width: 1rem;
+            height: 0.2rem;
+            border-radius: 50%;
+            background-color: #fdabaf;
+        }
+
+        .rosyCheeks-left {
+            left: 1.4rem;
+        }
+
+        .rosyCheeks-right {
+            right: 1.4rem;
+        }
+
+        .mouth {
+            position: absolute;
+            top: 3.1rem;
+            left: 50%;
+            width: 1.6rem;
+            height: 0.2rem;
+            border-radius: 0.1rem;
+            transform: translateX(-50%);
+            background-color: #293b49;
+        }
+
+        .text {
+            margin-top: 5rem;
+            font-weight: 300;
+            color: #293b49;
+        }
+
+        .button {
+            margin-top: 4rem;
+            padding: 1.2rem 3rem;
+            color: white;
+            background-color: #04cba0;
+        }
+
+            .button:hover {
+                background-color: #01ac88;
+            }
+
+        .by {
+            position: absolute;
+            bottom: 0.5rem;
+            left: 0.5rem;
+            text-transform: uppercase;
+            color: #293b49;
+        }
+
+        .byLink {
+            color: #04cba0;
+        }
     </style>
 </head>
 <body>
 
-    <h1>404</h1>
-    <div class="cloak__wrapper">
-        <div class="cloak__container">
-            <div class="cloak"></div>
+    <div class="center">
+        <div class="error">
+            <div class="number">4</div>
+            <div class="illustration">
+                <div class="circle"></div>
+                <div class="clip">
+                    <div class="paper">
+                        <div class="face">
+                            <div class="eyes">
+                                <div class="eye eye-left"></div>
+                                <div class="eye eye-right"></div>
+                            </div>
+                            <div class="rosyCheeks rosyCheeks-left"></div>
+                            <div class="rosyCheeks rosyCheeks-right"></div>
+                            <div class="mouth"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="number">4</div>
         </div>
+
+        <div class="text">Oop... You have no access to this page!</div>
+        <a class="button" href="/Users/Dashboard">Back Dashboard</a>
     </div>
-    <div class="info">
-        <h2>We can't find that page</h2>
-        <p>We're fairly sure that page used to be here, but seems to have gone missing. We do apologise on it's behalf.</p><a href="/Users/Dashboard" >Dashboard</a>
-    </div>
+  
 </body>
 </html>
