downloading chart scripts

--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
@@ -47,8 +47,8 @@
     
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="English navbar-brand ps-3" href="/Users/Dashboard">Welcome Back</a>
-        <a class="Arabic navbar-brand ps-3" href="/Users/Dashboard"> مرحبا بعودتك </a>
+        <a class="English navbar-brand ps-3" href="/Users/Dashboard">Shop Savvy</a>
+        <a class="Arabic navbar-brand ps-3" href="/Users/Dashboard">Shop Savvy</a>
         <!-- Sidebar Toggle-->
 
 
