--- a/MarketPricingSystem/MarketPricingSystem/Views/Track/Graph.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Track/Graph.cshtml
@@ -80,11 +80,11 @@
 
 
 
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
+    <script src="~/Scripts/highcharts1.js"></script>
+    <script src="~/Scripts/highcharts2.js"></script>
+    <script src="~/Scripts/highcharts3.js"></script>
+    <script src="~/Scripts/highcharts4.js"></script>
+  
 
     <script>
 
